--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ body {
   display: flex;
   justify-content: space-around;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.562);
+  justify-content: flex-start;
+  gap: 500px;
 }
 
 .job-listing img {
@@ -74,4 +76,10 @@ body {
   color: grey;
   display: flex;
   gap: 10px;
+}
+
+.job-container {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
