--- a/style.css
+++ b/style.css
@@ -79,7 +79,23 @@ body {
 }
 
 .job-container {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 15px; */
+  display: grid;
+  grid-template-rows: 1fr;
+  width: 1285px;
+  margin-left: 300px;
+  margin-top: 50px;
+  row-gap: 20px;
+}
+
+.hidden {
+  display: none;
+}
+
+.filter-section {
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.562);
+  display: flex;
+  gap: 10px;
 }
