Fixed positioning of language and tool tags

--- a/style.css
+++ b/style.css
@@ -21,10 +21,16 @@ body {
 
 .job-listing {
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.562);
   justify-content: flex-start;
-  gap: 500px;
+  /* gap: 500px; */
+  padding: 20px;
+  border-left: 5px solid hsl(180, 29%, 50%);
+}
+
+.selected {
+  border-left: 5px solid hsl(180, 29%, 50%);
 }
 
 .job-listing img {
@@ -34,7 +40,6 @@ body {
 .job-info {
   display: flex;
   gap: 20px;
-  border-left: 5px solid hsl(180, 29%, 50%);
 }
 
 .job-description span {
@@ -65,6 +70,7 @@ body {
 
 .tags {
   align-self: center;
+  margin-left: auto;
 }
 
 .tags span {
