--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   justify-content: flex-start;
   /* gap: 500px; */
   padding: 20px;
-  border-left: 5px solid hsl(180, 29%, 50%);
+  /* border-left: 5px solid hsl(180, 29%, 50%); */
 }
 
 .selected {
