--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   justify-content: flex-start;
   /* gap: 500px; */
   padding: 20px;
-  /* border-left: 5px solid hsl(180, 29%, 50%); */
+  cursor: pointer;
 }
 
 .selected {
@@ -71,11 +71,17 @@ body {
 .tags {
   align-self: center;
   margin-left: auto;
+  cursor: pointer;
 }
 
 .tags span {
   padding: 3px;
   background-color: hsl(180, 31%, 95%);
+}
+
+.tags span:hover {
+  background-color: hsl(180, 29%, 50%);
+  color: white;
 }
 
 .extra-info {
@@ -111,7 +117,33 @@ body {
   gap: 10px;
 }
 
+.filter-tags span,
+.clear-filters {
+  color: hsl(180, 29%, 50%);
+}
+
+.filter-tags span {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+
+.filter-tags button {
+  cursor: pointer;
+  color: white;
+  background-color: hsl(180, 29%, 50%);
+  padding: 5px;
+}
+
+.filter-tags button:hover {
+  background-color: black;
+}
+
 .clear-filters {
   border: none;
-  color: hsl(180, 29%, 50%);
+  cursor: pointer;
+}
+
+.clear-filters:hover {
+  text-decoration: underline;
 }
