--- a/style.css
+++ b/style.css
@@ -147,3 +147,35 @@ body {
 .clear-filters:hover {
   text-decoration: underline;
 }
+
+@media (max-width: 1400px) {
+  .header {
+    width: 2000px;
+  }
+}
+
+@media (max-width: 750px) {
+  body {
+    font-size: 28px;
+  }
+}
+
+@media (max-width: 375px) {
+  body {
+    font-size: 37px;
+  }
+
+  .job-listing {
+    flex-direction: column;
+    gap: 40px;
+  }
+
+  .tags {
+    margin: 0px;
+    margin-right: auto;
+    /* width: 400px; */
+    gap: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
